--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -81,3 +81,11 @@ categoria.totalCategorias = Total Categor\u00edas
 
 plantilla.logout=Salir
 plantilla.admin=Admin
+
+
+
+carrito.regresar=Continuar comprando
+carrito.carrito=Carrito de compras
+carrito.cantidadArticulos=articulos en el carrito
+carrito.resumen=Resumen de la compra
+
