--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -70,3 +70,8 @@ plantilla.tusuario=Usuario
 plantilla.troles=Roles
 plantilla.logout=Logout
 plantilla.admin=Admin
+
+carrito.regresar=Continue shopping
+carrito.carrito=Shopping cart
+carrito.cantidadArticulos=items in your cart
+carrito.resumen=Purchase summary
